[gd_scene load_steps=4 format=3 uid="uid://dh0mskh2vhm0x"]

[ext_resource type="Script" path="res://script/Menu_Spare.gd" id="1_4dcic"]
[ext_resource type="Texture2D" uid="uid://cwakah57w7cmn" path="res://arts/forest.jpg" id="2_y8tew"]
[ext_resource type="FontFile" uid="uid://bp54rgoiy71ga" path="res://PixeloidSans-mLxMm.ttf" id="3_yknbr"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4dcic")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y8tew")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -50.5
offset_right = 31.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sesat" type="Label" parent="Menu"]
self_modulate = Color(0.980139, 0.980139, 0.980139, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yknbr")
theme_override_font_sizes/font_size = 30
text = "SESAT"

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yknbr")
text = "Start"

[node name="Option" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yknbr")
text = "Option"

[node name="Instruction" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yknbr")
text = "Instruction"

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yknbr")
text = "Quit"

[node name="Option" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Option"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Option/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Option/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="BackFromOption" type="Button" parent="Option"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -40.0
offset_right = 55.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -58.0
offset_right = 212.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Master" type="Label" parent="Audio/HBoxContainer/Label"]
layout_mode = 2
text = "	Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Label"]
layout_mode = 2
text = "Music"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Label"]
layout_mode = 2
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Instruction" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Instruction"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Instruction/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Instruction/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Instruction"

[node name="Label2" type="Label" parent="Instruction/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Press W to move upward
Press A to move left
Press S to move downward
Press D to move right
Right-click to attack
Left-click to block
esc to pause / resume"

[node name="BackFromInstruction" type="Button" parent="Instruction"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -31.0
offset_right = 46.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Menu/Instruction" to="." method="_on_instruction_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Option/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Option/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Option/BackFromOption" to="." method="_on_back_from_option_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
[connection signal="pressed" from="Instruction/BackFromInstruction" to="." method="_on_back_from_instruction_pressed"]
